--- a/index.html
+++ b/index.html
@@ -1,152 +1,378 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
+
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <title>Heroes of History</title>
-  <meta name="description" content="An autonomous evolutionary trading card game">
-  <meta name="author" content="SitePoint">
+    <title>Heroes of History</title>
+    <meta name="description" content="An autonomous evolutionary trading card game" />
+    <meta name="author" content="SitePoint" />
 
-  <meta property="og:title" content="Heroes of History">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/">
-  <meta property="og:description" content="An autonomous evolutionary trading card game">
-  <meta property="og:image" content="image.png">
+    <meta property="og:title" content="Heroes of History" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/" />
+    <meta property="og:description" content="An autonomous evolutionary trading card game" />
+    <meta property="og:image" content="image.png" />
 
-  <link rel="icon" href="/favicon.ico">
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-  <style>
-      @import url('https://fonts.googleapis.com/css?family=Bellefair');
+    <link rel="stylesheet" href="css/styles.css?v=1.0" />
+    <style>
+        @import url("https://fonts.googleapis.com/css?family=Bellefair");
 
-    body {
-    padding: 0.5em 2em;
-    font-family: "Bellefair", serif;
-    font-size: 1.2em;
-    color: #fff;
-    background-color: #161B22;
-    }
+        body {
+            padding: 0.5em 2em;
+            font-family: "Bellefair", serif;
+            font-size: 1.2em;
+            color: #fff;
+            background-color: #161b22;
+        }
 
-    a{
-        color: #fff
-    }
+        a {
+            color: #fff;
+        }
 
-    p { max-width: 47%; }
+        p {
+            max-width: 47%;
+        }
 
-    table {
-    position: relative;
-    margin: 2em 0;
-    width: 100%;
-    max-width: 400px;
-    color: #fff;
-    text-align: left;
-    border-collapse: collapse;
-    background-color: rgba(45,45,55, 0.8); 
-    box-shadow: 0 0 10px rgba(0,0,0,0.8);
-    }
+        table {
+            position: relative;
+            margin: 2em 0;
+            width: 100%;
+            max-width: 400px;
+            color: #fff;
+            text-align: left;
+            border-collapse: collapse;
+            background-color: rgba(45, 45, 55, 0.8);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+        }
 
-    th, td { 
-    padding: 1em 1.5em; 
-    font-weight: normal;
-    border: 1px solid #974;
-    }
+        main {
+            margin: 0 auto;
+            max-width: 800px;
+        }
 
-    thead { text-transform: uppercase; }
-    th { white-space: nowrap; }
-    td { width: 100%; }
+        th,
+        td {
+            padding: 0.8em 1.5em;
+            font-weight: normal;
+            border: 1px solid #974;
+        }
 
-    tbody tr:first-child * { 
-    border-top: 0; /* fixes that border */
-    }
+        thead {
+            text-transform: uppercase;
+        }
 
-    thead tr,
-    tr:nth-child(even) {
-    background-color: rgba(24,24,34,0.8);
-    }
+        th {
+            white-space: nowrap;
+        }
 
-    /* them gribblies */
-    thead:before,
-    thead:after,
-    tbody:before,
-    tbody:after {
-    content: "";
-    position: absolute;
-    top: -3px; left: -3px;
-    display: block;
-    width: 32px; 
-    height: 32px;
-    background: url(gribblies.png) 0 0 no-repeat;
-    background-size: 100%;
-    }
+        td {
+            width: 100%;
+        }
 
-    thead:after {
-    right: -4px;
-    left: auto;
-    transform: rotate(90deg);
-    }
+        tbody tr:first-child * {
+            border-top: 0;
+        }
 
-    tbody:before {
-    top: auto;
-    bottom: -3px;
-    transform: rotate(-90deg);
-    }
+        thead tr,
+        tr:nth-child(even) {
+            background-color: rgba(24, 24, 34, 0.8);
+        }
 
-    tbody:after {
-    top: auto;
-    left: auto;
-    bottom: -3px;
-    right: -4px;
-    transform: rotate(-180deg);
-    }
-</style>
+        thead:before,
+        thead:after,
+        tbody:before,
+        tbody:after {
+            content: "";
+            position: absolute;
+            top: -3px;
+            left: -3px;
+            display: block;
+            width: 32px;
+            height: 32px;
+            background: url(gribblies.png) 0 0 no-repeat;
+            background-size: 100%;
+        }
 
+        thead:after {
+            right: -4px;
+            left: auto;
+            transform: rotate(90deg);
+        }
+
+        tbody:before {
+            top: auto;
+            bottom: -3px;
+            transform: rotate(-90deg);
+        }
+
+        tbody:after {
+            top: auto;
+            left: auto;
+            bottom: -3px;
+            right: -4px;
+            transform: rotate(-180deg);
+        }
+
+        .discord-invite {
+            background-color: rgb(47, 49, 54);
+            border-radius: 4px;
+            box-sizing: border-box;
+            height: 110px;
+            padding: 16px;
+            width: 432px;
+            font-family: Whitney, Helvetica Neue, Helvetica, Arial, sans-serif;
+            font-size: 14px;
+        }
+
+        .discord-invite-text {
+            block-size: 16px;
+            font-size: 12px;
+            height: 16px;
+            margin-bottom: 12px;
+            margin-top: 0px;
+            text-transform: uppercase;
+            color: rgb(185, 187, 190);
+        }
+
+        .discord-invite-body {
+            display: flex;
+            justify-content: center;
+            width: 400px;
+        }
+
+        .discord-invite-details {
+            block-size: 50px;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-around;
+            width: 246.2px;
+        }
+
+        .discord-invite-name {
+            margin: 0px;
+            color: white;
+            display: flex;
+        }
+
+        .discord-invite-verified {
+            color: rgb(114, 137, 218);
+            display: flex;
+            margin-right: 8px;
+        }
+
+        .discord-invite-verified-tick {
+            display: flex;
+            position: absolute;
+        }
+
+        .discord-invite-verified-tick-svg {
+            color: white;
+        }
+
+        .discord-invite-image img {
+            width: 40px;
+            height: 40px;
+            margin-top: 5px;
+            margin-right: 15px;
+        }
+
+        .discord-invite-counts {
+            margin: 0px;
+            align-items: center;
+            display: flex;
+            color: rgb(185, 187, 190);
+        }
+
+        .discord-invite-status-icon {
+            block-size: 8px;
+            border-radius: 50%;
+            inline-size: 8px;
+            margin-right: 4px;
+        }
+
+        .discord-invite-online-icon {
+            background-color: rgb(67, 181, 129);
+        }
+
+        .discord-invite-offline-icon {
+            background-color: rgb(116, 127, 141);
+        }
+
+        .discord-invite-join-button {
+            border-radius: 3px;
+            align-items: center;
+            background-color: rgb(67, 181, 129);
+            block-size: 40px;
+            box-sizing: border-box;
+            color: white;
+            display: flex;
+            inline-size: 77.8px;
+            justify-content: center;
+            margin-left: 10px;
+            padding: 2px 20px;
+            text-decoration: none;
+        }
+
+        .discord-invite-count {
+            font-size: 12px;
+            margin-right: 8px;
+        }
+    </style>
 </head>
 
 <body>
-
-    <h1>
-        Heroes of History
-    </h1>
+    <h1>Heroes of History</h1>
 
     <nav>
         <ul>
-            <li><a href="#example-cards">Example card</a></li>
+            <li><a href="#introduction">Introduction</a></li>
+            <li><a href="#autonomous">Autonomous</a></li>
+            <li><a href="#epoches">Epoches</a></li>
+            <li><a href="#putting-it-all-together">Putting it all together</a></li>
+            <li><a href="#join-discord">Join Discord</a></li>
+            <li><a href="#example-card">Example card</a></li>
         </ul>
     </nav>
 
-    <h2 id="example-card">
-        Example card
-    </h2>
+    <main>
+        <h2 id="introduction">Introduction</h2>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="2">Armor Skill List</th>   
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <th>Artillery Master</th>
-      <td>Large increase to damage from Ballista, Cannon, Crag S.</td>
-    </tr>
-    <tr>
-      <th>Attack Up (L)</th>
-      <td>Attack +20</td>
-    </tr>
-    <tr>
-      <th>Combo Plus</th>
-      <td>Always receive maximum number of items when combining.</td>
-    </tr>
-    <tr>
-      <th>Crit Draw</th>
-      <td>Grants 100% affinity when permofrming an unsheath attack.</td>
-    </tr>
-  </tbody>
-</table>
+        <div class="paper">
+            <p>Heroes of History is an autonomous evolutionary trading card game.
+                <br /><br />
+            <h3>Evolutionary</h3>
+            A neural network will use publicly available information to generate
+            playable cards of historic personas.
+            <br /><br />
+            Natural language processing will create and segment flavorful classes
+            such as "Villain", "Priest", "Warrior" or "Leader" and an open-source
+            predefined card game engine will create their stats such as power,
+            toughness and abilities based on their wikipedia page.
+            <br /><br />
+            Creative common images will be used to create the card images.
+            <br /><br />
+            <h3 id="autonomous">Autonomous</h3>
+            Once every quarter the machine learning algorithm will spill out 250 new tokenized cards which
+            the players can obtain by playing or buying on the open marketplace.
+            <br /><br />
+            To make sure the game (and their cards) stay balanced, every player can
+            vote on too powerful cards to ban and too bad cards to be improved in
+            the first week of the season. Those banned cards will be retrained and
+            nerved in the upcoming set.
+
+            <h3 id="epoches">Epoches</h3>
+            The game is called Heroes of History, because you play an Epoche from
+            the past.
+            <br /><br />
+            For example the French Revolution featuring
+            <strong>Louis XVI. King of France</strong>,
+            <strong>Marie Antoinette</strong>, <strong>Queen of France</strong> and
+            Artifacts such as the <strong></strong>Guillotine as Weapons in the
+            game. <br /><br />
+
+            <h3>
+                Why
+            </h3>
+
+            The whole idea is to give players ownership over their items. Ethereum was born because <a target="_blank"
+                rel="noreferrer"
+                href="https://markets.businessinsider.com/news/currencies/vitalik-buterin-created-ethereum-following-world-of-warcraft-debacle-2021-10">Vitalik
+                wasn't comfortable with how World of Warcraft treated his online assets</a>.
+            <br /><br />
+            The reason it's autonomous and evolutionary is that there is no single entity controlling the rules of a
+            game. Esports
+            can never be olympic, if there is a centralized profitable company
+            behind it, making the rules.
+            <br /><br />
+
+            <h3 id="putting-it-all-together">
+                Putting it all together
+            </h3>
+
+            Heroes of History is the first decentralized, evolutionary and
+            self-creating game, representing the history of humans.
+            <br /><br />
+
+            The frontends will be open-sourced on Github and will run on all devices.
+            <br /><br />
+
+            HoH Cards are tokenized and tradable on chain.
+            <br /><br />
+            Join our Discord server to discuss the project and contribute.
+
+            </p>
+        </div>
+
+        <div id="join-discord" class="discord-invite">
+            <h5 class="discord-invite-text">You have been invited to join a server</h5>
+            <div class="discord-invite-body">
+                <div class="discord-invite-image">
+                    <img src="discord.svg" />
+                </div>
+                <div class="discord-invite-details">
+                    <h3 class="discord-invite-name">
+                        Heroes of History
+                    </h3>
+                </div>
+                <a class="discord-invite-join-button" href="https://discord.gg/RBFJNGrzSf">
+                    Join
+                </a>
+            </div>
+        </div>
+
+
+        <h2 id="example-card">Example card</h2>
+
+        <table>
+            <thead>
+                <tr>
+                    <th colspan="2">Guillotine</th>
+                </tr>
+                <tr>
+                    <th colspan="2" style="padding: 0;">
+                        <div style="max-height: 300px; overflow: hidden;">
+                            <img style="margin-top:-250px"
+                                src="https://upload.wikimedia.org/wikipedia/commons/5/51/Olympe_gouges.jpg" />
+                        </div>
+                    </th>
+                </tr>
+            </thead>
+            <tbody>
+
+                <tr>
+                    <th>Class</th>
+                    <td>Weapon</td>
+                </tr>
+
+                <tr>
+                    <th>Epoche</th>
+                    <td>French Revolution </td>
+                </tr>
+                <tr>
+                    <th>Attack</th>
+                    <td>+20</td>
+                </tr>
+                <tr>
+                    <th>Defense</th>
+                    <td>+10</td>
+                </tr>
+                <tr>
+                    <td colspan="2"><i>
+                        Passive
+                    </i><br/>
+                    <br/>
+                    Whenever a <i>HUMAN</i> commits a <strong>crime</strong>, <i>GUILLOTINE</i> deals <strong>+20 damage</strong> to it.</td>
+                </tr>
+            </tbody>
+        </table>
+    </main>
 </body>
-</html>
 
+</html>
