--- a/index.html
+++ b/index.html
@@ -6,9 +6,26 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Heroes of History</title>
-    <meta name="description" content="An autonomous evolutionary trading card game" />
-    <meta name="author" content="SitePoint" />
+    <title>Heroes of History TCG</title>
+    <meta name="title" content="Heroes of History TCG">
+    <meta name="description"
+        content="An autonomous, evolutionary trading card game that uses a neural network to generate playable cards of historic personas and artifacts.">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://metatags.io/">
+    <meta property="og:title" content="Heroes of History TCG">
+    <meta property="og:description"
+        content="An autonomous, evolutionary trading card game that uses a neural network to generate playable cards of historic personas and artifacts.">
+    <meta property="og:image"
+        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://metatags.io/">
+    <meta property="twitter:title" content="Heroes of History TCG">
+    <meta property="twitter:description"
+        content="An autonomous, evolutionary trading card game that uses a neural network to generate playable cards of historic personas and artifacts.">
+    <meta property="twitter:image"
+        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
 
     <meta property="og:title" content="Heroes of History" />
     <meta property="og:type" content="website" />
@@ -16,218 +33,18 @@
     <meta property="og:description" content="An autonomous evolutionary trading card game" />
     <meta property="og:image" content="image.png" />
 
-    <link rel="icon" href="/favicon.ico" />
-    <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-
-    <link rel="stylesheet" href="css/styles.css?v=1.0" />
-    <style>
-        @import url("https://fonts.googleapis.com/css?family=Bellefair");
-
-        body {
-            padding: 0.5em 2em;
-            font-family: "Bellefair", serif;
-            font-size: 1.2em;
-            color: #fff;
-            background-color: #161b22;
-        }
-
-        a {
-            color: #fff;
-        }
-
-        p {
-            max-width: 47%;
-        }
-
-        table {
-            position: relative;
-            margin: 2em 0;
-            width: 100%;
-            max-width: 400px;
-            color: #fff;
-            text-align: left;
-            border-collapse: collapse;
-            background-color: rgba(45, 45, 55, 0.8);
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
-        }
-
-        main {
-            margin: 0 auto;
-            max-width: 800px;
-        }
-
-        th,
-        td {
-            padding: 0.8em 1.5em;
-            font-weight: normal;
-            border: 1px solid #974;
-        }
-
-        thead {
-            text-transform: uppercase;
-        }
-
-        th {
-            white-space: nowrap;
-        }
-
-        td {
-            width: 100%;
-        }
-
-        tbody tr:first-child * {
-            border-top: 0;
-        }
-
-        thead tr,
-        tr:nth-child(even) {
-            background-color: rgba(24, 24, 34, 0.8);
-        }
-
-        thead:before,
-        thead:after,
-        tbody:before,
-        tbody:after {
-            content: "";
-            position: absolute;
-            top: -3px;
-            left: -3px;
-            display: block;
-            width: 32px;
-            height: 32px;
-            background: url(gribblies.png) 0 0 no-repeat;
-            background-size: 100%;
-        }
-
-        thead:after {
-            right: -4px;
-            left: auto;
-            transform: rotate(90deg);
-        }
-
-        tbody:before {
-            top: auto;
-            bottom: -3px;
-            transform: rotate(-90deg);
-        }
-
-        tbody:after {
-            top: auto;
-            left: auto;
-            bottom: -3px;
-            right: -4px;
-            transform: rotate(-180deg);
-        }
-
-        .discord-invite {
-            background-color: rgb(47, 49, 54);
-            border-radius: 4px;
-            box-sizing: border-box;
-            height: 110px;
-            padding: 16px;
-            width: 432px;
-            font-family: Whitney, Helvetica Neue, Helvetica, Arial, sans-serif;
-            font-size: 14px;
-        }
-
-        .discord-invite-text {
-            block-size: 16px;
-            font-size: 12px;
-            height: 16px;
-            margin-bottom: 12px;
-            margin-top: 0px;
-            text-transform: uppercase;
-            color: rgb(185, 187, 190);
-        }
-
-        .discord-invite-body {
-            display: flex;
-            justify-content: center;
-            width: 400px;
-        }
-
-        .discord-invite-details {
-            block-size: 50px;
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            width: 246.2px;
-        }
-
-        .discord-invite-name {
-            margin: 0px;
-            color: white;
-            display: flex;
-        }
-
-        .discord-invite-verified {
-            color: rgb(114, 137, 218);
-            display: flex;
-            margin-right: 8px;
-        }
-
-        .discord-invite-verified-tick {
-            display: flex;
-            position: absolute;
-        }
-
-        .discord-invite-verified-tick-svg {
-            color: white;
-        }
-
-        .discord-invite-image img {
-            width: 40px;
-            height: 40px;
-            margin-top: 5px;
-            margin-right: 15px;
-        }
-
-        .discord-invite-counts {
-            margin: 0px;
-            align-items: center;
-            display: flex;
-            color: rgb(185, 187, 190);
-        }
-
-        .discord-invite-status-icon {
-            block-size: 8px;
-            border-radius: 50%;
-            inline-size: 8px;
-            margin-right: 4px;
-        }
-
-        .discord-invite-online-icon {
-            background-color: rgb(67, 181, 129);
-        }
-
-        .discord-invite-offline-icon {
-            background-color: rgb(116, 127, 141);
-        }
-
-        .discord-invite-join-button {
-            border-radius: 3px;
-            align-items: center;
-            background-color: rgb(67, 181, 129);
-            block-size: 40px;
-            box-sizing: border-box;
-            color: white;
-            display: flex;
-            inline-size: 77.8px;
-            justify-content: center;
-            margin-left: 10px;
-            padding: 2px 20px;
-            text-decoration: none;
-        }
-
-        .discord-invite-count {
-            font-size: 12px;
-            margin-right: 8px;
-        }
-    </style>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="manifest" href="site.webmanifest">
+    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
+    
     <h1>Heroes of History</h1>
 
     <nav>
@@ -245,11 +62,11 @@
         <h2 id="introduction">Introduction</h2>
 
         <div class="paper">
-            <p>Heroes of History is an autonomous evolutionary trading card game.
+            <p>Heroes of History is an autonomous, evolutionary trading card game.
                 <br /><br />
             <h3>Evolutionary</h3>
-            A neural network will use publicly available information to generate
-            playable cards of historic personas.
+            Machine learning will use publicly available information to generate
+            playable cards of historic personas and artifacts.
             <br /><br />
             Natural language processing will create and segment flavorful classes
             such as "Villain", "Priest", "Warrior" or "Leader" and an open-source
@@ -365,10 +182,12 @@
                 </tr>
                 <tr>
                     <td colspan="2"><i>
-                        Passive
-                    </i><br/>
-                    <br/>
-                    Whenever a <i>HUMAN</i> commits a <strong>crime</strong>, <i>GUILLOTINE</i> deals <strong>+20 damage</strong> to it.</td>
+                            Passive
+                        </i><br />
+                        <br />
+                        Whenever a <i>HUMAN</i> commits a <strong>crime</strong>, <i>GUILLOTINE</i> deals <strong>+20
+                            damage</strong> to it.
+                    </td>
                 </tr>
             </tbody>
         </table>
