--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <meta property="og:description"
         content="An autonomous, evolutionary trading card game that uses a neural network to generate playable cards of historic personas and artifacts.">
     <meta property="og:image"
-        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+        content="og-image.png">
 
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://metatags.io/">
@@ -25,7 +25,7 @@
     <meta property="twitter:description"
         content="An autonomous, evolutionary trading card game that uses a neural network to generate playable cards of historic personas and artifacts.">
     <meta property="twitter:image"
-        content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png">
+        content="og-image.png">
 
     <meta property="og:title" content="Heroes of History" />
     <meta property="og:type" content="website" />
