--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
     <meta property="twitter:description"
         content="An autonomous, evolutionary trading card game that uses a neural network to generate playable cards of historic personas and artifacts.">
     <meta property="twitter:image"
-        content="og-image.png">
+        content="https://www.heroesofhistory.xyz/og-image.png">
 
     <meta property="og:title" content="Heroes of History" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://www.sitepoint.com/a-basic-html5-template/" />
     <meta property="og:description" content="An autonomous evolutionary trading card game" />
-    <meta property="og:image" content="image.png" />
+    <meta property="og:image" content="https://www.heroesofhistory.xyz/og-image.png" />
 
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
