--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             To make sure the game (and their cards) stay balanced, every player can
             vote on too powerful cards to ban and too bad cards to be improved in
             the first week of the season. Those banned cards will be retrained and
-            nerved in the upcoming set.
+            their power level will decrease in an update.
 
             <h3 id="epoches">Epoches</h3>
             The game is called Heroes of History, because you play an Epoche from
